fix apple silicon fix